Mon Sep 23 00:16:31 1996  Mikael Djurfeldt  <mdj@kenneth>

	* boot-9.scm (warn, scm-style-repl): Use C printer instead of `print'.
	(make-record-type type-name fields): Temporarily remove support
	for printing of records (not possible yet with C printer).

Fri Sep 20 00:24:27 1996  Gary Houston  <ghouston@actrix.gen.nz>

	* boot-9.scm (file-exists?, file-is-directory): catch only
	system-error, not every kind of error.
	(scm-error): new procedure.

Thu Sep 19 16:02:46 1996  Jim Blandy  <jimb@totoro.cyclic.com>

	* boot-9.scm: Formatting tweaks.

Wed Sep 18 09:07:37 1996  Gary Houston  <ghouston@actrix.gen.nz>

	* boot-9.scm (%%handle-system-error key): remove the code for
	SCM-style errors.  handle the case that an unexpected number
	of args are supplied.
	(%%system-errors): removed.
	(error): redefine using a throw with key and 4 args.
	('error): associate 'error, 'error-signal keys with
	%%handle-system-error.
	(%%default-error-handler): removed.
	(signal-handler): throw with 4 args and use the error-signal key.
	Create an error message instead of using numerical codes.
	(%%bad-throw): call error instead of throw if key not found.

Tue Sep 17 04:11:28 1996  Gary Houston  <ghouston@actrix.gen.nz>

	* boot-9.scm: initialize new error keys (see libguile/ChangeLog).
	(%%handle-system-error key): check subr is not #f before printing.
	Recognize %s (embed an argument using "display") and
	%S (embed an argument using "write").

Sun Sep 15 03:55:35 1996  Gary Houston  <ghouston@actrix.gen.nz>

	* boot-9.scm (%%handle-system-error key): set args and rest to
	the empty list if they are #f.
	Initialize out-of-range as an error key.

Sat Sep 14 03:41:15 1996  Gary Houston  <ghouston@actrix.gen.nz>

	* PLUGIN/REQ: remove the "ice-9 lgh" line which causes a cycle.

	* boot-9.scm: remove leading %% from references to '%%system-error.
	(%%handle-system-error): don't pass all the thrown arguments when
	aborting, just the key and subr.